Fixing auto close for header in mobile view. Removing + symbol for fields in fields view

--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -80,7 +80,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-3 text-center">
                     <br/>
                     <a ng-click="editField(field)"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                    <a href="#" class="sr-only"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
                     <a ng-click="removeField(field)"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
                     <a class="move"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
                 </div>
