--- a/public/project/client/view/musicplayer/musicplayer.view.html
+++ b/public/project/client/view/musicplayer/musicplayer.view.html
@@ -2,10 +2,12 @@
     <div ng-if = "showPlayer">
         <div class="col-xs-6">
             <!--<h6>Player for Playlist {{currentPlaylist.playlistName}} goes here.</h6>-->
-            <iframe ng-src='{{player}}' frameborder="0" allowtransparency="true"></iframe>
+            <!--<iframe ng-src='{{player}}' frameborder="0" allowtransparency="true"></iframe>-->
+            <div ng-bind-html="player"></div>
+
         </div>
-        <div class="col-xs-6 text-right">
+        <!--<div class="col-xs-6 text-right">
             <a href="#" class="btn btn-primary">Chat</a>
-        </div>
+        </div>-->
     </div>
 </div>
