--- a/public/project/client/css/style.css
+++ b/public/project/client/css/style.css
@@ -1,3 +1,86 @@
+/*and (max-width: 767px)*/
+@media screen and (max-width: 767px){
+    .row-offcanvas {
+        position: relative;
+        -webkit-transition: all .25s ease-out;
+        -o-transition: all .25s ease-out;
+        transition: all .25s ease-out;
+    }
+
+    .row-offcanvas-right {
+        right: 0;
+    }
+
+    .row-offcanvas-left {
+        left: 0;
+    }
+
+    .row-offcanvas-right
+    .sidebar-offcanvas {
+        right: -50%; /* 6 columns */
+    }
+
+    .row-offcanvas-left
+    .sidebar-offcanvas {
+        left: -50%; /* 6 columns */
+    }
+
+    .row-offcanvas-right.active {
+        right: 50%; /* 6 columns */
+    }
+
+    .row-offcanvas-left.active {
+        left: 50%; /* 6 columns */
+    }
+
+    .sidebar-offcanvas {
+        position: absolute;
+        top: 0;
+        width: 50%; /* 6 columns */
+    }
+}
+
+@media screen and (min-width: 767px) and (max-width: 4096px){
+    .row-offcanvas {
+        position: relative;
+        -webkit-transition: all .25s ease-out;
+        -o-transition: all .25s ease-out;
+        transition: all .25s ease-out;
+    }
+
+    .row-offcanvas-right {
+        right: 0;
+    }
+
+    .row-offcanvas-left {
+        left: 0;
+    }
+
+    .row-offcanvas-right
+    .sidebar-offcanvas {
+        right: -25%; /* 6 columns */
+    }
+
+    .row-offcanvas-left
+    .sidebar-offcanvas {
+        left: -25%; /* 6 columns */
+    }
+
+    .row-offcanvas-right.active {
+        right: 25%; /* 6 columns */
+    }
+
+    .row-offcanvas-left.active {
+        left: 25%; /* 6 columns */
+    }
+
+    .sidebar-offcanvas {
+        position: absolute;
+        top: 0;
+        width: 25%; /* 6 columns */
+    }
+}
+
 .myrow{
     margin: 10px;
     padding-top: 10px;
@@ -10,6 +93,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    overflow-x: hidden;
 }
 .footer {
     padding-top: 10px;
@@ -21,6 +105,12 @@ body {
     /* Set the fixed height of the footer here */
     height: 100px; !important;
 }
+.chatblock {
+    min-height: 50vh;
+    max-height: 50vh;
+    overflow-y: auto;
+    background-color: #333333;
+}
 .valign {
     vertical-align: middle !important;
 }
@@ -29,4 +119,14 @@ body {
 }
 .artists {
     display: inline;
+}
+.hand {
+    cursor: pointer;
+}
+/*Padding to View to allow scroll to take care of fixed footer*/
+.pad-bottom {
+    padding-bottom: 120px;
+}
+.breakword {
+    word-wrap: break-word;
 }
