--- a/public/project/client/view/user/login.view.html
+++ b/public/project/client/view/user/login.view.html
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-                <button type="reset" class="btn btn-success">Login with&nbsp;<i class="fa fa-spotify"></i> </button>
+                <a href="/auth/soundcloud" class="btn btn-success">Login with&nbsp;<i class="fa fa-soundcloud"></i> </a>
                 <button type="submit" class="btn btn-primary" ng-click="login(user)">Login</button>
             </div>
         </div>
