--- a/public/project/client/view/user/profile.view.html
+++ b/public/project/client/view/user/profile.view.html
@@ -2,6 +2,15 @@
     <form class="form-horizontal">
         <fieldset>
             <legend>Profile</legend>
+            <div class="jumbotron">
+                <div class="container">
+                <label class="col-lg-2 col-md-2 col-sm-4 control-label nowrap">Sound Cloud Status:</label>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <button class="form-control btn btn-primary"  ng-if="user.soundCloud.id" disabled>Connected</button>
+                    <a class="form-control btn btn-primary" ng-if="!(user.soundCloud.id)" href="/auth/soundcloud">Connect</a>
+                </div>
+                </div>
+            </div>
             <div class="form-group">
                 <label for="inputUsername" class="col-lg-2 col-md-2 col-sm-2 control-label">Username</label>
                 <div class="col-lg-4 col-md-4 col-sm-6">
@@ -11,7 +20,7 @@
             <div class="form-group">
                 <label for="inputPassword" class="col-lg-2 col-md-2 col-sm-2 control-label">Password</label>
                 <div class="col-lg-4 col-md-4 col-sm-6">
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password" ng-disabled="!(user.username)">
                 </div>
             </div>
             <div class="form-group">
@@ -32,8 +41,9 @@
                     <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="user.lastName">
                 </div>
             </div>
+
             <div class="form-group">
-                <div class="col-lg-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-md-2 col-sm-2">
+                <div class="col-lg-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-md-4 col-sm-6">
                     <button type="submit" class="btn btn-success btn-block" ng-click="updateProfile(user)">Update</button>
                 </div>
             </div>
