--- a/public/project/client/view/playlist/myplaylist.view.html
+++ b/public/project/client/view/playlist/myplaylist.view.html
@@ -21,22 +21,11 @@
                     Action
                 </th>
             </tr>
-            <!--<tr>
-                <td class="valign">
-                    <input type="text" class="form-control" ng-model="selectedPlaylist.playlistName" placeholder="Playlist Name">
-                </td>
-                <td class="nowrap">
-                    <button class="fa fa-2x fa-plus-square btn btn-success" ng-click="addPlaylist(selectedPlaylist.playlistName)"></button>
-                    &nbsp;
-                    <button class="fa fa-2x fa-check-square btn btn-success" ng-click="updatePlaylist(selectedPlaylist.playlistName)"></button>
-                </td>
-            </tr>-->
             </thead>
             <tbody>
-                <tr ng-repeat="playlist in playlists | startFrom:currentPage | limitTo: pageSize">
+                <tr ng-repeat="playlist in playlists | startFrom: currentPage * pageSize  | limitTo: pageSize">
                     <td class="valign">
                         <a ng-click="viewPlaylistDetails(playlist)" class="hand">{{playlist.playlistName}}</a>
-                        <!--href="#/editplaylist/{{playlist.playlistName}}"-->
                     </td>
                     <td class="nowrap">
                         <button class="fa fa-2x fa-play-circle btn btn-success" ng-click="playPlaylist(playlist)"></button>
