Adding a few cosmetic changes

--- a/public/project/client/view/home/home.view.html
+++ b/public/project/client/view/home/home.view.html
@@ -1,26 +1,40 @@
 
 <div class="container">
     <search-control></search-control>
-    <div class="row">
+    <div class="row main">
         <div class="col-md-12">
-            <h2>Welcome!</h2>
+            <h3>Welcome to MusicSocial <span ng-if="user">{{user.firstName}}</span>!</h3>
             <div>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p><img src="img/whitelogo.png" height="80"/>
+                is an application where you can choose to listen to a music playlist from SoundCloud's large selection.</p>
+                <p>Not only this you can also chat with listeners of the same playlist and form new connections.</p>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6 col-sm-6">
-            <h3>Header 2</h3>
+            <h5>Social</h5>
             <div>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>
+                    Want to hear about our latest updates.
+                </p>
+                <p>
+                    Follow us on:
+                </p>
+                <p>
+                    <i class="fa fa-4x fa-twitter-square" aria-hidden="true"></i>
+                    &nbsp;
+                    <i class="fa fa-4x fa-facebook-official" aria-hidden="true"></i>
+                </p>
+
+                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>-->
             </div>
         </div>
-        <div class="col-md-6 col-sm-6">
-            <h3>Header 3</h3>
+        <div class="col-md-6 col-sm-6 text-right">
+            <h5>About Us</h5>
             <div>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>This website is powered by the <i class="fa fa-soundcloud" aria-hidden="true">SoundCloud</i> API.</p>
+                <p>Made for all the <i class="fa fa-3x fa-music" aria-hidden="true"></i>&nbsp;fanatics</p>
             </div>
         </div>
     </div>
