--- a/public/project/client/view/directive/search.directive.html
+++ b/public/project/client/view/directive/search.directive.html
@@ -1,5 +1,5 @@
-<div class="container col-md-12" ng-controller="SearchDirectiveController">
-    <div class="row">
+<div class="container" ng-controller="SearchDirectiveController">
+    <div class="row col-sm-12">
         <div class="form-group">
             <label class="control-label sr-only">Search</label>
             <div class="input-group">
