--- a/public/project/client/view/playlist/myplaylist.view.html
+++ b/public/project/client/view/playlist/myplaylist.view.html
@@ -1,12 +1,16 @@
 <div class="container" ng-controller="PlaylistController">
-    <!--<div class="col-md-12" ng-if="!(user.soundCloud.id)">
-        <h3>Connect to SoundCloud to access this feature</h3>
-    </div> ng-if="user.soundCloud.id"-->
     <fieldset>
-        <legend>My Playlists</legend>
+        <legend>Liked Playlists</legend>
         <h6>Search to Add Playlists</h6>
         <search-control></search-control>
-    <div class="col-md-12">
+        <div class="col-md-12" ng-if="noplaylists">
+            <div class="alert alert-dismissible alert-danger" >
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>Sorry!</strong>&nbsp;It seems you don't have any playlists.
+                Get started by searching for a playlist above.
+            </div>
+        </div>
+    <div class="col-md-12" ng-if="!(noplaylists)">
         <ul class="pager">
             <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
             <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
